--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="container">
                 <ul class="list-inline info">
                     <li><a href="#"><span class="fa fa-phone"></span>+44 7789669424</a></li>
-                    <li><a href="#"><span class="fa fa-envelope"></span>rdurgaprasad2809@gmail.com</a></li>
+                    <li><a href="#"><span class="fa fa-envelope"></span>iluconstruction83@gmail.com</a></li>
                     <li><a href="#"><span class="fa fa-clock-o"></span> Mon - Sat 9:00 - 19:00</a></li>
                 </ul>
                 <ul class="list-inline social_icon">
@@ -484,7 +484,7 @@
                             <li><a href=""><span class="fa fa-map-marker"></span> 1536 ASHTON OLD ROAD
                                     MANCHESTER
                                     ENGLAND M11 1HN</a></li>
-                            <li><a href=""><span class="fa fa-envelope"></span> rdurgaprasad2809@gmail.com</a></li>
+                            <li><a href=""><span class="fa fa-envelope"></span> iluconstruction83@gmail.com</a></li>
                             <li><a href=""><span class="fa fa-mobile"></span>
                                     <p>+44 7789669424</p>
                                 </a></li>
