Added whatsapp to phonenumber

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="top_nav">
             <div class="container">
                 <ul class="list-inline info">
-                    <li><a href="#"><span class="fa fa-phone"></span>+44 7789669424</a></li>
+                    <li><a href="https://wa.me/+44 7789669424" target="_blank"><span class="fa fa-phone"></span>+44 7789669424</a></li>
                     <li><a href="#"><span class="fa fa-envelope"></span>iluconstruction83@gmail.com</a></li>
                     <li><a href="#"><span class="fa fa-clock-o"></span> Mon - Sat 9:00 - 19:00</a></li>
                 </ul>
